2010-01-27 Harri Pitkänen <hatapitk@iki.fi>
	* Fix Python bindings to work with Python 3.

2010-01-02 Harri Pitkänen <hatapitk@iki.fi>
	* Remove dependency on glib.

2010-01-01 Harri Pitkänen <hatapitk@iki.fi>
	* Import UTF8-CPP version 2.2.4 from
	  https://sourceforge.net/projects/utfcpp

2009-12-31 Harri Pitkänen <hatapitk@iki.fi>
	* Support verb mood in morphological analysis.

2009-12-27 Harri Pitkänen <hatapitk@iki.fi>
	* No longer return "none" as a value for "SIJAMUOTO".

2009-12-26 Harri Pitkänen <hatapitk@iki.fi>
	* Support verb person in morphological analysis.

2009-12-13 Harri Pitkänen <hatapitk@iki.fi>
	* Support grammatical number in morphological
	  analysis.
	* Fix capitalization of base forms in analysis results.

2009-12-12 Harri Pitkänen <hatapitk@iki.fi>
	* Support multiple paragraph checking in Python
	  grammar checking API.

2009-11-26 Harri Pitkänen <hatapitk@iki.fi>
	* Add hyphenator factory.

2009-11-22 Harri Pitkänen <hatapitk@iki.fi>
	* Remove unnecessary header hyphenator.hpp.

2009-11-21 Harri Pitkänen <hatapitk@iki.fi>
	* Add documentation for morphological analyzer.

2009-11-15 Harri Pitkänen <hatapitk@iki.fi>
	* Accept "A-rapussa" in grammar checker.
	* Read speller configuration from dictionary description.
	* Add SpellerFactory.
	* Add my name and GPL license text to Malaga source files
	  as they have been significantly changed from originals.
	* Implement partially working HfstSpeller.

2009-11-14 Harri Pitkänen <hatapitk@iki.fi>
	* Add interface Speller and implement it in
	  AnalyzerToSpellerAdapter.

2009-11-09 Harri Pitkänen <hatapitk@iki.fi>

	* Most of the global variables have now been eliminated
	  from Malaga implementation.

2009-11-01 Harri Pitkänen <hatapitk@iki.fi>

	* HFST analyzer backend returns correct number of analyses.
	  Analysis attributes contain dummy values only.

2009-10-31 Harri Pitkänen <hatapitk@iki.fi>

	* Add configure option --enable-hfst.
	* Increase version numbers for 2.3.